Also allow to input umlauts and other printable characters.

Based on patch by Richard Lärkäng, thanks!

BUG: 133092

svn path=/trunk/KDE/kdepim/; revision=803952